# SYSC4001_A2_P2_101304731_101272792

./: CMakeLists.txt  part3_child.cpp  part3_parent.cpp  part4_child.cpp  part4_parent.cpp  part5_child  part5_child.cpp  part5_parent  part5_parent.cpp
